--- a/src/css/service-catalog.css
+++ b/src/css/service-catalog.css
@@ -138,7 +138,7 @@
 
 @media (max-width: 480px) {
     .hero-service-catalog{
-        height: 100vh;
+        height: 725px;
     }
 
     .price-content-container{
