--- a/src/css/hero-price-section.css
+++ b/src/css/hero-price-section.css
@@ -21,7 +21,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     /* Чёрный с прозрачностью 50% */
     z-index: 1;
 }
@@ -40,6 +40,6 @@
 
 @media (max-width: 480px) {
     .hero-price-section {
-        height: 100vh;
+        height: 760px;
     }
 }
