--- a/src/css/hero-contacts-section.css
+++ b/src/css/hero-contacts-section.css
@@ -38,3 +38,14 @@
     font-size: 28px;
     max-width: 450px;
 }
+/* 
+.hero-content-contacts{
+    margin-top: 80px;
+    margin-right: auto;
+    margin-left: 20px;
+}
+
+.contacts-div{
+    margin: 0px;
+    padding: 0px;
+} */
