--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -93,7 +93,7 @@
     display: flex;
     align-items: center;
     background: #24a7c1;
-    color: white;
+    color: #f8f8f8;
     height: 28px;
     width: 28px;
     /* Начальная ширина - квадрат */
