--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,18 +1,23 @@
 .footer-container {
     border-bottom: 1px solid #f8f8f8;
+    padding: 20px 20px;
     margin-bottom: 8px;
-    padding: 20px 260px;
 }
 
 .top-footer {
     display: flex;
     justify-content: space-between;
     margin-bottom: 28px;
+    max-width: 900px;
+    margin: 8px auto;
 }
 
 .bot-footer{
     display: flex;
+    gap: 22px;
     justify-content: space-between;
+    max-width: 900px;
+    margin: 8px auto;
 }
 
 .map-title {
@@ -39,7 +44,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .work-footer-div>h3{
@@ -186,4 +191,9 @@
     .bot-footer{
         flex-direction: column;
     }
+}
+
+.develop{
+    display: flex;
+    margin-top: 60px;
 }
