--- a/src/css/ustanovka-gbo.css
+++ b/src/css/ustanovka-gbo.css
@@ -1,7 +1,6 @@
 .hero-gbo {
     position: relative;
     color: white;
-    background-image: url(../img/gbo/hero-gbo.jpg);
     background-color: #101010;
     background-size: cover;
     background-position: center;
@@ -12,6 +11,12 @@
     justify-content: center;
     text-align: center;
     border-top: 1px solid #f8f8f8;
+}
+
+.hero-gbo {
+  /* Для смартфонов */
+  background-image: url(../img/gbo/hero-gbo.webp);
+  background-image: url(../img/gbo/hero-gbo.jpg);
 }
 
 .hero-gbo::before {
