--- a/src/css/service-catalog.css
+++ b/src/css/service-catalog.css
@@ -185,3 +185,35 @@
       flex-direction: column;
     }
   }
+
+  .dvigatel-span{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+    color: #101010;
+    text-align: center;
+    max-width: 850px;
+    margin: 30px auto;
+  }
+
+  .uslugi-final-content{
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    font-size: 18px;
+    color: #101010;
+    /* text-align: center; */
+    max-width: 900px;
+    margin: 0px auto;
+}
+
+.gbo-section>table{
+    max-width: 1000px;
+    margin-bottom: 0px;
+}
+
