--- a/src/css/parts.css
+++ b/src/css/parts.css
@@ -4,7 +4,7 @@
     background-color: #101010;
     background-size: cover;
     background-position: center;
-    height: 75vh;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
