--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,4 @@
 @import url('./css/foto-gallery.css');
 @import url('./css/main-content-section.css');
 @import url('./css/ustanovka-gbo.css');
+@import url('./css/TS-card.css');
