--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,5 @@
 @import url('./css/main-content-section.css');
 @import url('./css/ustanovka-gbo.css');
 @import url('./css/TS-card.css');
+@import url('./css/evacuator.css');
+@import url('./css/seasonal-offers.css');
