--- a/src/css/hero-section.css
+++ b/src/css/hero-section.css
@@ -99,7 +99,7 @@
 .hero-contact-number{
     color: #f8f8f8;
     font-size: 20px;
-    /* margin: 8px auto; */
+    font-weight: 900;
 }
 
 .hero-contact-number{
